--- a/app/assets/stylesheets/task-show.css
+++ b/app/assets/stylesheets/task-show.css
@@ -5,8 +5,13 @@ html body.tasks.show {
   padding: 0 !important;
   display: block !important;
   grid-template-columns: none !important;
-  height: 100vh;
-  overflow: hidden;
+}
+
+@media (min-width: 769px) {
+  html body.tasks.show {
+    height: 100vh;
+    overflow: hidden;
+  }
 }
 
 html body.tasks.show > * {
